# paperclaw

./: .gitignore  .pre-commit-config.yaml  README.md  VIBE_CHECK.md  paperclaw.txt  pixi.toml  pyproject.toml  vibe-check-report.html
.github/workflows/: ci.yml
docs/: DESIGN.md
src/paperclaw/: _config.py  _naming.py  _tools.py  chat.py  classifier.py  cli.py  extractor.py  library_index.py  mcp_server.py  pipeline.py  protocols.py  schemas.py  storage.py
tests/: conftest.py  test_chat.py  test_classifier.py  test_cli.py  test_config.py  test_extractor.py  test_library_index.py  test_mcp_server.py  test_naming.py  test_pipeline.py  test_schemas.py  test_storage.py  test_tools.py
