[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperclaw"
version = "0.1.0"
description = "Turn a folder of PDFs into an organized, agent-searchable library."
readme = "paperclaw.txt"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11",
    "anthropic>=0.40",
    "pydantic>=2.7",
    "typer>=0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/paperclaw"]

# --- pixi ---

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.12"

[tool.pixi.pypi-dependencies]
paperclaw = { path = ".", editable = true }

[tool.pixi.feature.dev.pypi-dependencies]
pytest = ">=8.2"
pytest-cov = ">=5.0"
ruff = ">=0.4"
black = ">=24"
prek = "*"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
test = "pytest"
lint = "ruff check src/ tests/"
fmt  = "black src/ tests/"

# --- tool config ---

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "B017"]

[tool.ruff.lint.isort]
known-first-party = ["paperclaw"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=paperclaw --cov-report=term-missing -q"
markers = [
    "integration: marks integration tests (deselect with '-m not integration')",
]
